[gd_scene load_steps=5 format=3 uid="uid://5qk7do4n5phk"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_ihjhn"]

[sub_resource type="Animation" id="Animation_rckl3"]
resource_name = "pause_menu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5eiss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_out2u"]
_data = {
"RESET": SubResource("Animation_5eiss"),
"pause_menu": SubResource("Animation_rckl3")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ihjhn")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -85.5
offset_right = 59.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeGameButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options Menu"

[node name="SaveGameButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="RestartGameButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_out2u")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsMenuButton" to="." method="_on_options_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SaveGameButton" to="." method="_on_options_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
